@@ -85,6 +85,7 @@ Tom Christiansen
 Vadim Chugunov
 David Cinege
 Mike Clarkson
+Brad Clements
 Steve Clift
 Josh Cogliati
 Dave Cole
